--- a/smartContract/samplesGame/index.html
+++ b/smartContract/samplesGame/index.html
@@ -29,8 +29,8 @@
       <td id="game-2"></td>
     </tr>
     <tr>
-      <td>Your creativity comes into play here!</td>
-      <td>Explain what your idea is :) </td>
+      <td>Zero</td>
+      <td>Place a bet on number zero </td>
       <td id="game-3"></td>
     </tr>
     </tbody>
@@ -39,14 +39,14 @@
 </div>
 <p>
   Which move are you gonna make? <br>
-  <input type="text" id="candidate" placeholder="Enter a valid game name from above"/>
+  <input type="text" id="game" placeholder="Enter a valid game name from above" class="inputWidth"/>
 </p>
 <p>
   How much ether do you risk? <br>
-  <input type="number" id="betAmount" placeholder="Enter the amount of ether you want to gamble"/>
+  <input type="number" id="betAmount" placeholder="Enter the amount of ether you want to gamble" class="inputWidth"/>
 </p>
 <p class="bottom-three">
-  <a href="#" onclick="voteForCandidate()" class="btn btn-primary">Rien ne va plus!</a>
+  <a href="#" onclick="playRoulette()" class="btn btn-primary">Rien ne va plus!</a>
 </p>
 
 
@@ -65,19 +65,22 @@
     <tr>
       <td>Your creativity comes into play here!</td>
       <td>Explain what your idea is :) </td>
-      <td id="candidate-3"></td>
+      <td id="game-4"></td>
     </tr>
     </tbody>
   </table>
   <div id="msg"></div>
 </div>
-<td>Which move are you gonna make?</td>
-<input type="text" id="candidate" />
+<p>
+  Which move are you gonna make? <br>
+  <input type="text" id="secondGame" placeholder="Enter a valid game name from above" class="inputWidth"/>
+</p>
+<p>
+  How much ether do you risk? <br>
+  <input type="number" id="betAmount" placeholder="Enter the amount of ether you want to gamble" class="inputWidth"/>
 </p>
 <p class="bottom-three">
-<td>How much ether do you risk?</td>
-<input type="number" id="betAmount" />
-<a href="#" onclick="voteForCandidate()" class="btn btn-primary">Go!</a>
+  <a href="#" onclick="playRoulette()" class="btn btn-primary">Go!</a>
 </p>
 </body>
 <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
